# gs2ew

./: .gitignore  README.md  main.py  pyproject.toml
src/gs2ew/postprocess/: fields.py  transfer.py
src/gs2ew/utils/: gs2_output.py
