[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gs2ew"
version = "0.1.0"
description = "Hodge-podge of analysis scripts for the gyrokinetic code GS2."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=2.2.6",
    "xarray>=2025.6.1",
]

[tool.setuptools.packages.find]
where = ["src"]
